--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -21,6 +21,30 @@
     "services": {
       "title": "Paslaugos",
       "description": "Mūsų komanda turi stiprius išsilavinimo pažymėjimus, intelektualų smalsumą, įrodytus lyderystės gebėjimus ir atsidavimą vertybėms. \nEsame analitiškai griežti ir teikiame faktais pagrįstus patarimus, kad galėtume atlikti darbą. \nTai darydami užtikriname puikų kainos ir kokybės santykį, visada stengdamiesi suprasti ir patenkinti kliento poreikius kuo efektyviau, darydami kuo mažesnį neigiamą poveikį aplinkai."
+    },
+    "articles": {
+      "description": "",
+      "title": "Straipsniai"
+    },
+    "careers": {
+      "description": "",
+      "title": "Karjera"
+    },
+    "company": {
+      "description": "OÜ Primelight meta iššūkį tradicinėms valdymo konsultavimo normoms, teikdama kokybiškus patarėjų talentus, kurie duoda rezultatus už gerą kainą. \nMes padedame savo klientams nuo privačių įmonių iki vyriausybių ir ne pelno organizacijų mesti iššūkį savo pramonės šakoms, tapdami novatoriškesniais, efektyvesniais ir dinamiškesniais.",
+      "title": "OÜ Primelight istorija"
+    },
+    "contact": {
+      "description": "",
+      "title": "kontaktas"
+    },
+    "financing": {
+      "description": "Finansavimo programos yra svarbus finansavimo šaltinis ekonominio neapibrėžtumo metu ir papildomas kuras verslo veiklai ir visuomenės procesams finansuoti bet kuriuo metu. \nES finansavimo programos skirtos remti mokslinius tyrimus, plėtrą ir inovacijas bei konkrečių visuomenės prioritetų (aplinkosaugos ir klimato veiksmų, garso ir vaizdo, kultūros ir kūrybos sektorių, švietimo, mokymo, jaunimo ir sporto iniciatyvų ir kt.) pažangą.",
+      "title": "Finansavimas"
+    },
+    "team": {
+      "description": "Mūsų 350 konsultantų ir 150 programinės įrangos kūrėjų komandai vadovauja partneriai ir vadovai. \nŠie asmenys, dirbantys 18 šalių, derina stiprius išsilavinimo įgūdžius, intelektualų smalsumą, įrodytus lyderystės gebėjimus ir įsipareigojimą laikytis vertybių.",
+      "title": "Komanda"
     }
   }
 }
