fix: main and services pages: added given en locale + fix locale z-index in mobile size

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,7 +31,7 @@
   "top-section": {
     "services": {
       "title": "Services",
-      "description": "Our team has strong educational credentials, intellectual curiosity, proven leadership capacity and commitment to values. We are analytically rigorous, delivering fact-based advice to get the job done. In doing so, we provide great value for the money price point, always striving to understand and meet the customer's needs as efficiently as possible, with the least negative impact on the environment."
+      "description": "OU Primelight’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
     },
     "company": {
       "title": "Story of OÜ Primelight",
