feat/EST + fixos: tags : article categories and team countries are real + footer + bugfix in news tags selection

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -252,5 +252,14 @@
   "Life": "Life +",
   "LIFE supports private bodies public entities and NGOs in the environment and climate field": "LIFE+ supports private bodies, public entities and NGOs in the environment and climate field by financing technology development, strategies and policy development aimed at ensuring nature conservation, biodiversity, environment and resource efficiency, climate change mitigation and adaptation.",
   "Innovation Fund": "Innovation Fund",
-  "Innovation Fund supports innovation in the fields of energy-intensive industries": "Innovation Fund supports innovation in the fields of energy-intensive industries; renewables; energy storage; carbon capture, use and storage. The aim of the fund is to support investments in the next generation of technologies needed for EU‘s low-carbon transition as well as boost the growth and competitiveness of EU companies."
+  "Innovation Fund supports innovation in the fields of energy-intensive industries": "Innovation Fund supports innovation in the fields of energy-intensive industries; renewables; energy storage; carbon capture, use and storage. The aim of the fund is to support investments in the next generation of technologies needed for EU‘s low-carbon transition as well as boost the growth and competitiveness of EU companies.",
+  "registry-code": "OÜ Primelight OU - Registry code 11954642",
+  "Registry code": "Registry code",
+  "Registered 14": {
+    "06": {
+      "2010": "Registered 14.06.2010"
+    }
+  },
+  "address": "Tallinn, Lasnamäe linnaosa, Ruunaoja tn 3-81, 1141",
+  "We have no content in the selected article": "We have no content in the selected article"
 }
