--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,8 +39,8 @@
       "description": "OU Primelight’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
     },
     "company": {
-      "title": "Story of OÜ Primelight",
-      "description": "OÜ Primelight challenges the traditional norms of management consulting, providing quality advisory talent that delivers results at a value for money price point. We help our clients from private companies to governments and non-profits to challenge their own industries by becoming more innovative, efficient and dynamic."
+      "title": "Story of Primelight OU",
+      "description": "Primelight OU challenges the traditional norms of management consulting, providing quality advisory talent that delivers results at a value for money price point. We help our clients from private companies to governments and non-profits to challenge their own industries by becoming more innovative, efficient and dynamic."
     },
     "team": {
       "title": "Team",
@@ -73,7 +73,7 @@
   "with an effective management model we ensure": "With an effective management model, we ensure that the money paid for our work is invested in the project, not into overheads",
   "the new office in yerevan": "The new office in Yerevan strengthens the company’s regional position",
   "ou primelight management consulting": "OU Primelight - Management Consulting",
-  "Started as an alliance of advisory firms in the Baltic States": "Started as an alliance of advisory firms in the Baltic States, and headquartered in Estonia, OÜ Primelight is now the leading management consultancy from Central Eastern Europe",
+  "Started as an alliance of advisory firms in the Baltic States": "Started as an alliance of advisory firms in the Baltic States, and headquartered in Estonia, Primelight OU is now the leading management consultancy from Central Eastern Europe",
   "OU Primelight is the leading management consultancy from Central Eastern Europe": "OU Primelight is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. OU Primelight provides exclusive and traditional management consulting services to all clients over the world",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "We combine bold strategies and transformative technologies to help organizations innovate more sustainably, achieve lasting gains in performance, and build workforces that will thrive for this generation and the next",
   "OU Primeligt provides management consulting and data analytic services to companies": "OU Primeligt provides management consulting and data analytic services to companies, star-ups, SMEs, government organizations and etc., delivering professional services and great value for money",
@@ -140,9 +140,9 @@
   "We provide support and assistance at all stages of the project implementation": "We provide support and assistance at all stages of the project implementation, by setting up and running project management office, helping with business development and expansion, as well as building outsourcing network in Central Eastern Europe.",
   "We ensure our clients stability in all daily operations in a strategic": "We ensure our clients stability in all daily operations in a strategic and qualitative manner, as well assist them in obtaining optimal funding opportunities. Our emphasis on sustainability, trust and tolerance for diverging opinions helps clients focus on their opportunities, build their capabilities and win the future.",
   "Case studies": "Case studies",
-  "Poland-based SAS Advisors is joining OU Primelight": "Poland-based SAS Advisors is joining OÜ Primelight",
+  "Poland-based SAS Advisors is joining OU Primelight": "Poland-based SAS Advisors is joining Primelight OU",
   "We combine traditional consulting model": "We combine traditional consulting model",
-  "Fact-Based management consultigs": "Fact-Based management consultigs",
+  "Fact-Based management consultig": "Fact-Based management consultig",
   "Experiences Team": "Experiences Team",
   "We use methodologies and approaches of the traditional consulting toolkit": "We use methodologies and approaches of the traditional consulting toolkit, with a focus on analytical rigor and fact-based problem-solving. Our prior consulting experience in over 10 000 projects and extensive network allows us to make use of the best industry and functional practices.",
   "Bold And Innovative": "Bold And Innovative",
@@ -156,7 +156,7 @@
   "We challenge ourselves": "We challenge ourselves — we like unconventional projects",
   "Practical and Iimpact-Oriented": "Practical and Iimpact-Oriented",
   "Our history": "Our history",
-  "OU Primelight was established as an alliance of consulting companies in the Baltic States": "OÜ Primelight was established as an alliance of consulting companies in the Baltic States (OÜ Primelight, Innopolis, and Advisio). From its roots in the Baltics, OÜ Primelight has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
+  "OU Primelight was established as an alliance of consulting companies in the Baltic States": "Primelight OU was established as an alliance of consulting companies in the Baltic States (Primelight OU, Innopolis, and Advisio). From its roots in the Baltics, Primelight OU has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
   "Contact us and find out how we can work together": "Contact us and find out how we can work together",
   "Fill the contact form": "Fill the contact form",
   "Required fields": "Required fields",
@@ -185,15 +185,15 @@
   "We value a high degree of responsibility and the importance of input from every employee from day one on the job": "We value a high degree of responsibility and the importance of input from every employee from day one on the job. Everyone is expected to contribute to overall success.",
   "Flexibility": "Flexibility",
   "We seek to balance getting the job done with employees": "We seek to balance getting the job done with employees’ lives outside work, creating the possibilities to combine studies, entrepreneurial activities, hobbies, sports, and family life.",
-  "Working at OU Primelight": "Working at OÜ Primelight",
-  "At OU Primelight we provide an enjoyable working atmosphere": "At OÜ Primelight, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
+  "Working at OU Primelight": "Working at Primelight OU",
+  "At OU Primelight we provide an enjoyable working atmosphere": "At Primelight OU, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
   "Fun": "Fun",
   "Stories of our people": "Stories of our people",
-  "OU Primelight Challengers": "OÜ Primelight Challengers",
-  "Consulting career path at OU Primelight": "Consulting career path at OÜ Primelight",
+  "OU Primelight Challengers": "Primelight OU Challengers",
+  "Consulting career path at OU Primelight": "Consulting career path at Primelight OU",
   "We truly believe that our success lies in the talented and passionate team of professionals": "We truly believe that our success lies in the talented and passionate team of professionals who make CIVITTA a great place to work. We encourage our personnel to seek adventure in everything they do and help them to achieve their professional and personal goals.",
   "Searching for new career opportunities": "Searching for new career opportunities?",
-  "Apply now and build your career in OU Primelight": "Apply now and build your career in OÜ Primelight, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
+  "Apply now and build your career in OU Primelight": "Apply now and build your career in Primelight OU, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
   "Partner": "Partner",
   "Project manager / Team lead": "Project manager / Team lead",
   "Associate partner": "Associate partner",
@@ -210,8 +210,8 @@
   "eg portfolio references": "e.g. portfolio, references",
   "I have read and understood that my personal data will be processed for the ongoing recruitment processpe": "I have read and understood that my personal data will be processed for the ongoing recruitment process, as described in the",
   "Privacy notice for applicants": "Privacy notice for applicants",
-  "I agree to the storage of my personal data to be contacted": "I agree to the storage of my personal data to be contacted by OÜ Primelight for future employment opportunities, as described in the",
-  "I agree that OU Primelight shares my personal data internally": "I agree that OÜ Primelight shares my personal data internally, with other OÜ Primelight offices, as described in the",
+  "I agree to the storage of my personal data to be contacted": "I agree to the storage of my personal data to be contacted by Primelight OU for future employment opportunities, as described in the",
+  "I agree that OU Primelight shares my personal data internally": "I agree that Primelight OU shares my personal data internally, with other Primelight OU offices, as described in the",
   "Preferred location": "Preferred location",
   "or": "or",
   "Upload CV": "Upload CV",
@@ -220,7 +220,7 @@
   "Privacy policy": "Privacy policy",
   "Cookie notice": "Cookie notice",
   "All": "All",
-  "OU Primelight International": "OÜ Primelight International",
+  "OU Primelight International": "Primelight OU International",
   "Send a message": "Send a message",
   "Visit country page": "Visit country page",
   "Navigate": "Navigate",
@@ -243,7 +243,7 @@
   "EIC supports highly innovative SMEs and start-ups in developing ground-breaking business ideas": "EIC supports highly innovative SMEs and start-ups in developing ground-breaking business ideas further into market-ready products, service or processes by financing advanced prototyping, validation, trials, demonstration, testing, certification and commercialization.",
   "Cascade Funding": "Cascade Funding",
   "Cascade funding opportunities are calls organized within H2020 projects to tech start-ups or scale-ups via acceleration": "Cascade funding opportunities are calls organized within H2020 projects to tech start-ups or scale-ups via acceleration, incubation and mentoring programs or for implementing pilots, demonstrations and experiments on a specific innovative technology or framework defined in the project.",
-  "Eit Innovation Comunities": "Eit Innovation Comunities",
+  "Eit Innovation Communities": "Eit Innovation Communities",
   "The European Institute of Innovation and Technology supports the creation and fining of innovative solutions": "The European Institute of Innovation and Technology supports the creation and fining of innovative solutions to major societal challenges through training and education programs, development of innovative products and services and powering startups and scale-ups.",
   "Erasmus": "Erasmus+",
   "Erasmus supports education": "Erasmus+ supports education, training, youth and sport organisations by financing collaboration in the fields of academic and vocational training, schools, adult learning, European sport events, teaching, research, networking and policy debate on EU topics.",
@@ -253,13 +253,16 @@
   "LIFE supports private bodies public entities and NGOs in the environment and climate field": "LIFE+ supports private bodies, public entities and NGOs in the environment and climate field by financing technology development, strategies and policy development aimed at ensuring nature conservation, biodiversity, environment and resource efficiency, climate change mitigation and adaptation.",
   "Innovation Fund": "Innovation Fund",
   "Innovation Fund supports innovation in the fields of energy-intensive industries": "Innovation Fund supports innovation in the fields of energy-intensive industries; renewables; energy storage; carbon capture, use and storage. The aim of the fund is to support investments in the next generation of technologies needed for EU‘s low-carbon transition as well as boost the growth and competitiveness of EU companies.",
-  "registry-code": "OÜ Primelight OU - Registry code 11954642",
+  "registry-code": "Primelight OU OU - Registry code 11954642",
   "Registry code": "Registry code",
   "Registered 14": {
     "06": {
       "2010": "Registered 14.06.2010"
     }
   },
-  "address": "Tallinn, Lasnamäe linnaosa, Ruunaoja tn 3-81, 1141",
-  "We have no content in the selected article": "We have no content in the selected article"
+  "address": "Tallinn, Lasnamäe linnaosa,",
+  "We have no content in the selected article": "We have no content in the selected article",
+  "Our latest articles": "Our latest articles",
+  "We have no latest articles at the time": "We have no latest articles at the time",
+  "address 2": "Ruunaoja tn 3-81, 1141"
 }
