--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,7 +36,7 @@
   "top-section": {
     "services": {
       "title": "Services",
-      "description": "OU Primelight’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
+      "description": "Primelight OÜ’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
     },
     "company": {
       "title": "Story of Primelight OU",
@@ -72,9 +72,9 @@
   "we deliver more": "We deliver more",
   "with an effective management model we ensure": "With an effective management model, we ensure that the money paid for our work is invested in the project, not into overheads",
   "the new office in yerevan": "The new office in Yerevan strengthens the company’s regional position",
-  "ou primelight management consulting": "OU Primelight - Management Consulting",
+  "Primelight OÜ management consulting": "Primelight OÜ - Management Consulting",
   "Started as an alliance of advisory firms in the Baltic States": "Started as an alliance of advisory firms in the Baltic States, and headquartered in Estonia, Primelight OU is now the leading management consultancy from Central Eastern Europe",
-  "OU Primelight is the leading management consultancy from Central Eastern Europe": "OU Primelight is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. OU Primelight provides exclusive and traditional management consulting services to all clients over the world",
+  "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. Primelight OÜ provides exclusive and traditional management consulting services to all clients over the world",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "We combine bold strategies and transformative technologies to help organizations innovate more sustainably, achieve lasting gains in performance, and build workforces that will thrive for this generation and the next",
   "OU Primeligt provides management consulting and data analytic services to companies": "OU Primeligt provides management consulting and data analytic services to companies, star-ups, SMEs, government organizations and etc., delivering professional services and great value for money",
   "Our services include strategy development": "Our services include strategy development, innovation, funding, research and implementation",
@@ -101,7 +101,7 @@
   "with a sales offices in the": "with a sales offices in the",
   "Armenia": "Armenia",
   "United Kingdom": "United Kingdom",
-  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe, Asia and Africa. OU Primelight is known by many as the world’s leading consulting firm in the knowledge management field.",
+  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe, Asia and Africa. Primelight OÜ is known by many as the world’s leading consulting firm in the knowledge management field.",
   "Students and graduates": "Students and graduates",
   "We are always looking for young talents from our local markets who want to develop professionally": "We are always looking for young talents from our local markets who want to develop professionally by doing meaningful projects in their home countries and internationally. If you are a student or a recent graduate, we offer various internship and entry-level positions that will best suit your needs.",
   "Experienced professionals": "Experienced professionals",
@@ -135,12 +135,12 @@
   "Our consultants advise organizations on high-level decisions in strategic planning": "Our consultants advise organizations on high-level decisions in strategic planning, expansion of new markets, management modification using deep industry knowledge to deliver the best results. We offer the best strategy practices and experience gained across many countries and industries.",
   "We help making future by being in the whole innovation value chain from helping clients innovate to evaluating": "We help making future by being in the whole innovation value chain from helping clients innovate to evaluating, finding and creating sustainable innovations through our multiyear experience and professional team.",
   "We help clients to choose the right funding opportunities": "We help clients to choose the right funding opportunities, develop the project and follow through the implementation process. We also provide advisory services in national EU program funding, EU-level program funding (Horizon 2020).",
-  "We collect and analyze external and internal information": "We collect and analyze external and internal information in order to deliver the best solutions to our clients. OU Primelight conducts research into trends and developments in the consulting industry, aswell as performs research into trending topics at the intersection of management, economics, IT, real estate, construction and many other fields.",
+  "We collect and analyze external and internal information": "We collect and analyze external and internal information in order to deliver the best solutions to our clients. Primelight OÜ conducts research into trends and developments in the consulting industry, aswell as performs research into trending topics at the intersection of management, economics, IT, real estate, construction and many other fields.",
   "We help our clients to become more competitive": "We help our clients to become more competitive in the digital market by using Big Data and the latest IT innovations. We provide digital strategies, customer analysis and redesign, UX/UI, web and mobile software development, segmentation and other IT services.",
   "We provide support and assistance at all stages of the project implementation": "We provide support and assistance at all stages of the project implementation, by setting up and running project management office, helping with business development and expansion, as well as building outsourcing network in Central Eastern Europe.",
   "We ensure our clients stability in all daily operations in a strategic": "We ensure our clients stability in all daily operations in a strategic and qualitative manner, as well assist them in obtaining optimal funding opportunities. Our emphasis on sustainability, trust and tolerance for diverging opinions helps clients focus on their opportunities, build their capabilities and win the future.",
   "Case studies": "Case studies",
-  "Poland-based SAS Advisors is joining OU Primelight": "Poland-based SAS Advisors is joining Primelight OU",
+  "Poland-based SAS Advisors is joining Primelight OÜ": "Poland-based SAS Advisors is joining Primelight OU",
   "We combine traditional consulting model": "We combine traditional consulting model",
   "Fact-Based management consultig": "Fact-Based management consultig",
   "Experiences Team": "Experiences Team",
@@ -156,7 +156,7 @@
   "We challenge ourselves": "We challenge ourselves — we like unconventional projects",
   "Practical and Iimpact-Oriented": "Practical and Iimpact-Oriented",
   "Our history": "Our history",
-  "OU Primelight was established as an alliance of consulting companies in the Baltic States": "Primelight OU was established as an alliance of consulting companies in the Baltic States (Primelight OU, Innopolis, and Advisio). From its roots in the Baltics, Primelight OU has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
+  "Primelight OÜ was established as an alliance of consulting companies in the Baltic States": "Primelight OU was established as an alliance of consulting companies in the Baltic States (Primelight OU, Innopolis, and Advisio). From its roots in the Baltics, Primelight OU has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
   "Contact us and find out how we can work together": "Contact us and find out how we can work together",
   "Fill the contact form": "Fill the contact form",
   "Required fields": "Required fields",
@@ -185,15 +185,15 @@
   "We value a high degree of responsibility and the importance of input from every employee from day one on the job": "We value a high degree of responsibility and the importance of input from every employee from day one on the job. Everyone is expected to contribute to overall success.",
   "Flexibility": "Flexibility",
   "We seek to balance getting the job done with employees": "We seek to balance getting the job done with employees’ lives outside work, creating the possibilities to combine studies, entrepreneurial activities, hobbies, sports, and family life.",
-  "Working at OU Primelight": "Working at Primelight OU",
-  "At OU Primelight we provide an enjoyable working atmosphere": "At Primelight OU, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
+  "Working at Primelight OÜ": "Working at Primelight OU",
+  "At Primelight OÜ we provide an enjoyable working atmosphere": "At Primelight OU, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
   "Fun": "Fun",
   "Stories of our people": "Stories of our people",
-  "OU Primelight Challengers": "Primelight OU Challengers",
-  "Consulting career path at OU Primelight": "Consulting career path at Primelight OU",
+  "Primelight OÜ Challengers": "Primelight OU Challengers",
+  "Consulting career path at Primelight OÜ": "Consulting career path at Primelight OU",
   "We truly believe that our success lies in the talented and passionate team of professionals": "We truly believe that our success lies in the talented and passionate team of professionals who make CIVITTA a great place to work. We encourage our personnel to seek adventure in everything they do and help them to achieve their professional and personal goals.",
   "Searching for new career opportunities": "Searching for new career opportunities?",
-  "Apply now and build your career in OU Primelight": "Apply now and build your career in Primelight OU, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
+  "Apply now and build your career in Primelight OÜ": "Apply now and build your career in Primelight OU, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
   "Partner": "Partner",
   "Project manager / Team lead": "Project manager / Team lead",
   "Associate partner": "Associate partner",
@@ -211,7 +211,7 @@
   "I have read and understood that my personal data will be processed for the ongoing recruitment processpe": "I have read and understood that my personal data will be processed for the ongoing recruitment process, as described in the",
   "Privacy notice for applicants": "Privacy notice for applicants",
   "I agree to the storage of my personal data to be contacted": "I agree to the storage of my personal data to be contacted by Primelight OU for future employment opportunities, as described in the",
-  "I agree that OU Primelight shares my personal data internally": "I agree that Primelight OU shares my personal data internally, with other Primelight OU offices, as described in the",
+  "I agree that Primelight OÜ shares my personal data internally": "I agree that Primelight OU shares my personal data internally, with other Primelight OU offices, as described in the",
   "Preferred location": "Preferred location",
   "or": "or",
   "Upload CV": "Upload CV",
@@ -220,7 +220,7 @@
   "Privacy policy": "Privacy policy",
   "Cookie notice": "Cookie notice",
   "All": "All",
-  "OU Primelight International": "Primelight OU International",
+  "Primelight OÜ International": "Primelight OU International",
   "Send a message": "Send a message",
   "Visit country page": "Visit country page",
   "Navigate": "Navigate",
