--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -3,10 +3,10 @@
   "All": "Kõik",
   "All rights reserved": "Kõik õigused kaitstud",
   "Analyst / Consultant": "Analüütik / konsultant",
-  "Apply now and build your career in OU Primelight": "Kandideeri kohe ja ehita oma karjääri Primelight OU-s, omandatavad kogemused ja avaldatud mõju. \nTäida taotlusvorm. \nMeie meeskond vaatab selle üle ja võtab teiega ühendust. \nKui teil on taotluse kohta küsimusi, saatke e-kiri aadressile",
+  "Apply now and build your career in Primelight OÜ": "Kandideeri kohe ja ehita oma karjääri Primelight OU-s, omandatavad kogemused ja avaldatud mõju. \nTäida taotlusvorm. \nMeie meeskond vaatab selle üle ja võtab teiega ühendust. \nKui teil on taotluse kohta küsimusi, saatke e-kiri aadressile",
   "Armenia": "Armeenia",
   "Associate partner": "Kaaspartner",
-  "At OU Primelight we provide an enjoyable working atmosphere": "Primelight OU-s pakume kogu ettevõttele meeldivat tööõhkkonda, seltskondlikke üritusi, välisseansse ja välisreise.",
+  "At Primelight OÜ we provide an enjoyable working atmosphere": "Primelight OU-s pakume kogu ettevõttele meeldivat tööõhkkonda, seltskondlikke üritusi, välisseansse ja välisreise.",
   "Bold And Innovative": "Julge ja uuenduslik",
   "Cascade Funding": "Kaskaadi rahastamine",
   "Cascade funding opportunities are calls organized within H2020 projects to tech start-ups or scale-ups via acceleration": "Kaskaadfinantseerimisvõimalused on H2020 projektide korraldavate konkursikutsed tehnoloogia alustamise või laienevatele ettevõtetele kiirendus-, inkubatsiooni- ja mentorprogrammide kaudu või projektide määratletud konkreetse uuendusliku tehnoloogia või raamistiku pilootprojektide, demonstratsioonide katsete ja elluviimiseks.",
@@ -14,7 +14,7 @@
   "Company information": "Ettevõtte info",
   "Connect companies and public organizations": "Ühendage ettevõtted ja avalikud organisatsioonid.",
   "Consultants": "Konsultandid",
-  "Consulting career path at OU Primelight": "Konsulteeriv karjääritee Primelight OU-s",
+  "Consulting career path at Primelight OÜ": "Konsulteeriv karjääritee Primelight OU-s",
   "Contact Us": "Võta meiega ühendust",
   "Contact us and find out how we can work together": "Võtke meiega ühendust ja uurige, kuidas saaksime teha",
   "Cookie notice": "Küpsise teatis",
@@ -42,7 +42,7 @@
   "Horizon Europe": "Horisont Euroopa",
   "Horizon Europe supports large international consortiums composing": "Horizon Europe toetab suuri rahvusvahelisi konsortsiumi, kuhu kuuluvad R",
   "How can we help you grow": "Kuidas saame aidata teil kasvada?",
-  "I agree that OU Primelight shares my personal data internally": "Nõustun, et Primelight OU jagab minu isikuandmeid sisemiselt teiste Primelight OU kontoritega, nagu on kirjeldatud",
+  "I agree that Primelight OÜ shares my personal data internally": "Nõustun, et Primelight OU jagab minu isikuandmeid sisemiselt teiste Primelight OU kontoritega, nagu on kirjeldatud",
   "I agree to receive from CIVITTA information related to the services it offers": "Nõustun saama CIVITTA-lt teavet selle pakutavate teenuste kohta.",
   "I agree to the storage of my personal data to be contacted": "Nõustun oma isikuandmete säilitamisega, et Primelight OU võtab nendega tulevaste töövõimaluste osas ühendust, nagu on kirjeldatud dokumendis",
   "I have read and understood that my personal data will be processed for contact purposes as described in the": "Olen lugenud ja aru saanud, et minu isikuandmeid töödeldakse kontakteesmärkidel, nagu on kirjeldatud",
@@ -68,15 +68,15 @@
   "Local programs in Latvia for new products and technologies development in competence centers and innovation vouchers": "Kohalikud programmid Lätis uute toodete ja tehnoloogiate arendamiseks kompetentsikeskustes ning innovatsioonivautšerid.",
   "Local programs in Lithuania for industry digitization": "Leedu kohalikud programmid tööstuse digiteerimiseks, ökoinnovatsiooniks, rohelise tööstuse innovatsiooniks ja IKT-ks.",
   "Local programs in Romania for innovative green": "Kohalikud programmid Rumeenias uuenduslike roheliste, sinise ja IKT tehnoloogiate, toodete, protsesside ja lahenduste jaoks.",
-  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Enamik meie projekte on pärit rahvusvahelisest mõtteviisist ja on taganud eduka koostöö klientidega Euroopas, Aasias ja Aafrikas. \nOU Primelight on paljudele tuntud kui maailma juhtiv teadmusjuhtimise valdkonna konsultatsioonifirma.",
+  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Enamik meie projekte on pärit rahvusvahelisest mõtteviisist ja on taganud eduka koostöö klientidega Euroopas, Aasias ja Aafrikas. \nPrimelight OÜ on paljudele tuntud kui maailma juhtiv teadmusjuhtimise valdkonna konsultatsioonifirma.",
   "National branches": "Rahvuslikud filiaalid",
   "National financing opportunities": "Riiklikud rahastamisvõimalused",
   "Navigate": "Navigeerige",
   "Non - hierarchical organization": "Mittehierarhiline organisatsioon",
-  "OU Primelight Challengers": "Primelight OU väljakutsujad",
-  "OU Primelight International": "Primelight OU International",
-  "OU Primelight is the leading management consultancy from Central Eastern Europe": "OU Primelight on Kesk-Ida-Euroopa juhtiv juhtimiskonsultatsioonifirma. \nMeie nõustamisteenused tegutsevad enam kui 40 riigis Euroopas, Aasias ja USA-s, mille tulemuseks on üle 10 000 eduka projekti. \nOU Primelight pakub eksklusiivseid ja traditsioonilisi juhtimisnõustamisteenuseid kõikidele klientidele üle maailma",
-  "OU Primelight was established as an alliance of consulting companies in the Baltic States": "Primelight OU loodi Balti riikide konsultatsiooniettevõtete liiduna (Primelight OU, Innopolis ja Advisio). \nPrimelight OU on Baltikumi juurtest alates orgaanilise kasvu, ühinemiste ja ülevõtmiste kaudu puslesarnaselt laienenud. \nTänaseks töötab meie ettevõttes üle 300 konsultandi 18 riigis, kusjuures ligikaudu pooled töötajatest töötavad väljaspool Baltikumi.",
+  "Primelight OÜ Challengers": "Primelight OU väljakutsujad",
+  "Primelight OÜ International": "Primelight OU International",
+  "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ on Kesk-Ida-Euroopa juhtiv juhtimiskonsultatsioonifirma. \nMeie nõustamisteenused tegutsevad enam kui 40 riigis Euroopas, Aasias ja USA-s, mille tulemuseks on üle 10 000 eduka projekti. \nPrimelight OÜ pakub eksklusiivseid ja traditsioonilisi juhtimisnõustamisteenuseid kõikidele klientidele üle maailma",
+  "Primelight OÜ was established as an alliance of consulting companies in the Baltic States": "Primelight OU loodi Balti riikide konsultatsiooniettevõtete liiduna (Primelight OU, Innopolis ja Advisio). \nPrimelight OU on Baltikumi juurtest alates orgaanilise kasvu, ühinemiste ja ülevõtmiste kaudu puslesarnaselt laienenud. \nTänaseks töötab meie ettevõttes üle 300 konsultandi 18 riigis, kusjuures ligikaudu pooled töötajatest töötavad väljaspool Baltikumi.",
   "OU Primeligt Provides methodological expertise to help its clients capture growth opportunity": "OU Primeligt pakub metoodilisi teadmisi, et aidata oma klientidel kasvuvõimalusi kasutada.",
   "OU Primeligt provides management consulting and data analytic services to companies": "OU Primeligt pakub juhtimisnõustamis- ja andmeanalüütilisi teenuseid ettevõtetele, idufirmadele, VKEdele, valitsusasutustele jne, pakkudes professionaalseid teenuseid ja head hinna ja kvaliteedi suhet.",
   "OU Primeligt was founded in 2012 and has been in continuous operation for more than 9 years": "OU Primeligt asutati 2012. aastal ja on pidevalt tegutsenud üle 9 aasta.",
@@ -94,7 +94,7 @@
   "Partner": "Partner",
   "Paste link to your online profile": "Kleepige link oma veebiprofiilile (nt LinkedIn) või laadige üles oma CV",
   "Performs larger and more sophisticated tasks": "Täidab suuremaid ja keerukamaid ülesandeid, sealhulgas andmete analüüsi ja visualiseerimist, hüpoteeside sõnastamist ja kontrollimist jne.",
-  "Poland-based SAS Advisors is joining OU Primelight": "Poolas asuv SAS Advisors liitub Primelight OU-ga",
+  "Poland-based SAS Advisors is joining Primelight OÜ": "Poolas asuv SAS Advisors liitub Primelight OU-ga",
   "Positive and impactful innovation": "Positiivne ja mõjus innovatsioon",
   "Practical and Iimpact-Oriented": "Praktiline ja mõjule orienteeritud",
   "Preferred location": "Eelistatud asukoht",
@@ -146,7 +146,7 @@
   "We challenge our clients": "Me esitame oma klientidele väljakutse – me ei karda esitada raskeid küsimusi ja aitame klientidel ennast või oma tegevusalasid proovile panna.",
   "We challenge our competitors": "Me esitame oma konkurentidele väljakutse – pakume suuremat väärtust mastaapselt.",
   "We challenge ourselves": "Me esitame endale väljakutse — meile meeldivad ebatavalised projektid",
-  "We collect and analyze external and internal information": "Kogume ja analüüsime välist ja sisemist teavet, et pakkuda oma klientidele parimaid lahendusi. \nOU Primelight viib läbi konsultatsioonivaldkonna trendide ja arengute uuringuid, samuti uurib trendikaid teemasid juhtimise, majanduse, IT, kinnisvara, ehituse ja paljude teiste valdkondade ristumiskohas.",
+  "We collect and analyze external and internal information": "Kogume ja analüüsime välist ja sisemist teavet, et pakkuda oma klientidele parimaid lahendusi. \nPrimelight OÜ viib läbi konsultatsioonivaldkonna trendide ja arengute uuringuid, samuti uurib trendikaid teemasid juhtimise, majanduse, IT, kinnisvara, ehituse ja paljude teiste valdkondade ristumiskohas.",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "Kombineerime julgeid strateegiaid ja ümberkujundavaid tehnoloogiaid, et aidata organisatsioonidel jätkusuutlikumalt uuendusi teha, saavutada püsivat tulemuslikkust ja luua tööjõudu, kes arenevad selle ja järgmise põlvkonna jaoks.",
   "We combine traditional consulting model": "Ühendame traditsioonilise nõustamismudeli",
   "We ensure our clients stability in all daily operations in a strategic": "Tagame oma klientidele stabiilsuse kõigis igapäevatoimingutes strateegiliselt ja kvalitatiivselt ning aitame neil leida optimaalseid rahastamisvõimalusi. \nMeie rõhuasetus jätkusuutlikkusele, usaldusele ja eriarvamuste sallivusele aitab klientidel keskenduda oma võimalustele, arendada oma võimekust ja võita tulevikku.",
@@ -171,7 +171,7 @@
   "We value people who are not ordinary and who do not want to do everyday things": "Väärtustame inimesi, kes ei ole tavalised ja kes ei taha teha igapäevaseid asju. \nOleme avatud uutele kogemustele ja status quo väljakutsetele. \nSiin pole kunagi igav!",
   "What we do": "Mida me teeme?",
   "Where we are located": "Kus me oleme",
-  "Working at OU Primelight": "Töötamine ettevõttes Primelight OU",
+  "Working at Primelight OÜ": "Töötamine ettevõttes Primelight OU",
   "Works more closely with client team members and owns a particular stream": "Teeb tihedamat koostööd kliendimeeskonna liikmetega ja omab projektis konkreetset voogu, näiteks tegevusanalüüsi, turu-uuringu, finantsmudeli jms teostamine.",
   "Your form has been successfully send": "Teie vorm on edukalt saadetud",
   "Your message": "Sinu sõnum",
@@ -247,7 +247,7 @@
       "title": "Finantseerimine"
     },
     "services": {
-      "description": "OU Primelighti meeskond on välja töötanud uuenduslikud lahendused, mis koostatud metoodikatega juhivad vastavusriske ja tegelevad organisatsiooni mõjutavate regulatiivsete vastavuse olulise tähtsusega.",
+      "description": "Primelight OÜi meeskond on välja töötanud uuenduslikud lahendused, mis koostatud metoodikatega juhivad vastavusriske ja tegelevad organisatsiooni mõjutavate regulatiivsete vastavuse olulise tähtsusega.",
       "title": "Teismelised"
     },
     "team": {
@@ -263,6 +263,6 @@
   "We have no latest articles at the time": "Meil pole sel ajal uusimaid artikleid",
   "address 2": "Ruunaoja tn 3-81, 1141",
   "or": "või",
-  "ou primelight management consulting": "OU Primelight juhtimiskonsultatsioonid",
+  "Primelight OÜ management consulting": "Primelight OÜ juhtimiskonsultatsioonid",
   "over 18 countries throughout europe": "Üle 18 riigi üle Euroopa"
 }
