fix design: max width for content only  + add locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -264,5 +264,8 @@
   "We have no content in the selected article": "We have no content in the selected article",
   "Our latest articles": "Our latest articles",
   "We have no latest articles at the time": "We have no latest articles at the time",
-  "address 2": "Ruunaoja tn 3-81, 1141"
+  "address 2": "Ruunaoja tn 3-81, 1141",
+  "We have no articles in the selected category": "We have no articles in the selected category",
+  "Learn more about": "Learn more about",
+  "Back": "Back"
 }
