--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -264,5 +264,8 @@
   "address 2": "Ruunaoja tn 3-81, 1141",
   "or": "või",
   "Primelight OÜ management consulting": "Primelight OÜ juhtimiskonsultatsioonid",
-  "over 18 countries throughout europe": "Üle 18 riigi üle Euroopa"
+  "over 18 countries throughout europe": "Üle 18 riigi üle Euroopa",
+  "We have no articles in the selected category": "Meil pole valitud kategoorias artikleid",
+  "Learn more about": "Lisateavet",
+  "Back": "Tagasi"
 }
