--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -253,7 +253,7 @@
   "LIFE supports private bodies public entities and NGOs in the environment and climate field": "LIFE+ supports private bodies, public entities and NGOs in the environment and climate field by financing technology development, strategies and policy development aimed at ensuring nature conservation, biodiversity, environment and resource efficiency, climate change mitigation and adaptation.",
   "Innovation Fund": "Innovation Fund",
   "Innovation Fund supports innovation in the fields of energy-intensive industries": "Innovation Fund supports innovation in the fields of energy-intensive industries; renewables; energy storage; carbon capture, use and storage. The aim of the fund is to support investments in the next generation of technologies needed for EU‘s low-carbon transition as well as boost the growth and competitiveness of EU companies.",
-  "registry-code": "Primelight OU OU - Registry code 11954642",
+  "registry-code": "Primelight OU - Registry code 11954642",
   "Registry code": "Registry code",
   "Registered 14": {
     "06": {
@@ -267,5 +267,11 @@
   "address 2": "Ruunaoja tn 3-81, 1141",
   "We have no articles in the selected category": "We have no articles in the selected category",
   "Learn more about": "Learn more about",
-  "Back": "Back"
+  "Back": "Back",
+  "Please fill required fields": "Please fill required fields",
+  "Company name": "Company name",
+  "Phone": "Phone",
+  "Surname": "Surname",
+  "Name": "Name",
+  "Email": "Email"
 }
