fix/upd texts + imgs

--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -77,9 +77,9 @@
   "Primelight OÜ International": "Primelight OU International",
   "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ on Kesk-Ida-Euroopa juhtiv juhtimiskonsultatsioonifirma. \nMeie nõustamisteenused tegutsevad enam kui 40 riigis Euroopas, Aasias ja USA-s, mille tulemuseks on üle 10 000 eduka projekti. \nPrimelight OÜ pakub eksklusiivseid ja traditsioonilisi juhtimisnõustamisteenuseid kõikidele klientidele üle maailma",
   "Primelight OÜ was established as an alliance of consulting companies in the Baltic States": "Primelight OU loodi Balti riikide konsultatsiooniettevõtete liiduna (Primelight OU, Innopolis ja Advisio). \nPrimelight OU on Baltikumi juurtest alates orgaanilise kasvu, ühinemiste ja ülevõtmiste kaudu puslesarnaselt laienenud. \nTänaseks töötab meie ettevõttes üle 300 konsultandi 18 riigis, kusjuures ligikaudu pooled töötajatest töötavad väljaspool Baltikumi.",
-  "OU Primeligt Provides methodological expertise to help its clients capture growth opportunity": "OU Primeligt pakub metoodilisi teadmisi, et aidata oma klientidel kasvuvõimalusi kasutada.",
-  "OU Primeligt provides management consulting and data analytic services to companies": "OU Primeligt pakub juhtimisnõustamis- ja andmeanalüütilisi teenuseid ettevõtetele, idufirmadele, VKEdele, valitsusasutustele jne, pakkudes professionaalseid teenuseid ja head hinna ja kvaliteedi suhet.",
-  "OU Primeligt was founded in 2012 and has been in continuous operation for more than 9 years": "OU Primeligt asutati 2012. aastal ja on pidevalt tegutsenud üle 9 aasta.",
+  "Primelight OU Provides methodological expertise to help its clients capture growth opportunity": "Primelight OU pakub metoodilisi teadmisi, et aidata oma klientidel kasvuvõimalusi kasutada.",
+  "Primelight OU provides management consulting and data analytic services to companies": "Primelight OU pakub juhtimisnõustamis- ja andmeanalüütilisi teenuseid ettevõtetele, idufirmadele, VKEdele, valitsusasutustele jne, pakkudes professionaalseid teenuseid ja head hinna ja kvaliteedi suhet.",
+  "Primelight OU was founded": "Primelight OU asutati Eestis Tallinnas 2012. aastal ja on pidevalt tegutsenud üle 11 aasta.",
   "Offices": "Kontorid",
   "Offices you want to contact": "Kontor(id), millega soovite ühendust võtta",
   "Our Services": "Meie teenused",
