--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,10 +76,10 @@
   "Started as an alliance of advisory firms in the Baltic States": "Started as an alliance of advisory firms in the Baltic States, and headquartered in Estonia, Primelight OU is now the leading management consultancy from Central Eastern Europe",
   "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. Primelight OÜ provides exclusive and traditional management consulting services to all clients over the world",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "We combine bold strategies and transformative technologies to help organizations innovate more sustainably, achieve lasting gains in performance, and build workforces that will thrive for this generation and the next",
-  "OU Primeligt provides management consulting and data analytic services to companies": "OU Primeligt provides management consulting and data analytic services to companies, star-ups, SMEs, government organizations and etc., delivering professional services and great value for money",
+  "Primelight OU provides management consulting and data analytic services to companies": "Primelight OU provides management consulting and data analytic services to companies, star-ups, SMEs, government organizations and etc., delivering professional services and great value for money",
   "Our services include strategy development": "Our services include strategy development, innovation, funding, research and implementation",
   "We take a consistent approach to recruiting and skills development regardless of where our people are located": "We take a consistent approach to recruiting and skills development regardless of where our people are located, so that we can quickly deliver the right team, with the right experience and expertise, to every client, anywhere in the world",
-  "OU Primeligt Provides methodological expertise to help its clients capture growth opportunity": "OU Primeligt Provides methodological expertise to help its clients capture growth opportunity.",
+  "Primelight OU Provides methodological expertise to help its clients capture growth opportunity": "Primelight OU Provides methodological expertise to help its clients capture growth opportunity.",
   "We use innovative technologies to identify new ways to reach consumers and build enterprise resilience": "We use innovative technologies to identify new ways to reach consumers and build enterprise resilience.",
   "Innovation": "Innovation",
   "Strategy": "Strategy",
@@ -94,7 +94,7 @@
   "Sustainability": "Sustainability",
   "Connect companies and public organizations": "Connect companies and public organizations.",
   "Where we are located": "Where we are&nbsp;located?",
-  "OU Primeligt was founded in 2012 and has been in continuous operation for more than 9 years": "OU Primeligt was founded in 2012 and has been in continuous operation for more than 9 years.",
+  "Primelight OU was founded": "Primelight OU was founded in Tallinn, Estonia back in 2012  and has been in continuous operation for more than 11 years.",
   "Kosovo": "Kosovo",
   "and": "and",
   "Turkey": "Turkey",
